{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 69,
  "lineage": "b9f78f0e-1f7c-150c-d07d-9b882f9321ff",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-017c2cf8b1bba6c27",
            "public_dns": "ec2-54-78-203-29.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.203.29",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-eip-001"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-04e38ee3c349de33f",
            "public_dns": "ec2-63-35-23-228.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.35.23.228",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-eip-002"
            },
            "vpc": true
          }
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0cf9940521ca42ca1",
            "public_dns": "ec2-54-78-203-192.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.203.192",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-eip-003"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:internet-gateway/igw-08232eea406f9ff5d",
            "id": "igw-08232eea406f9ff5d",
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-igw"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017c2cf8b1bba6c27",
            "id": "nat-0fee0a69ef77c3a87",
            "network_interface_id": "eni-0928a33aa93e33a73",
            "private_ip": "10.0.26.21",
            "public_ip": "54.78.203.29",
            "subnet_id": "subnet-0470f1e270ce83d1c",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-nat-001"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04e38ee3c349de33f",
            "id": "nat-0172baf89bad30cc5",
            "network_interface_id": "eni-0dd848b0d9c11ebe0",
            "private_ip": "10.0.62.150",
            "public_ip": "63.35.23.228",
            "subnet_id": "subnet-004695555e8c18403",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-nat-002"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf9940521ca42ca1",
            "id": "nat-0ed8928f39120e6f5",
            "network_interface_id": "eni-0341828017ef0cbc5",
            "private_ip": "10.0.82.178",
            "public_ip": "54.78.203.192",
            "subnet_id": "subnet-0257d64ea0bc90a04",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-nat-003"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-00b4af7b27cd26eb61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0fee0a69ef77c3a87",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00b4af7b27cd26eb6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02b0fe0c1170b11f01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0172baf89bad30cc5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b0fe0c1170b11f0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a58647581665d3d41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "nat-0ed8928f39120e6f5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a58647581665d3d4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08232eea406f9ff5d",
            "id": "r-rtb-06c921abfdc322ba01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06c921abfdc322ba0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00b4af7b27cd26eb6",
            "owner_id": "903578915146",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-routing-table-private-001"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b0fe0c1170b11f0",
            "owner_id": "903578915146",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-routing-table-private-002"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0a58647581665d3d4",
            "owner_id": "903578915146",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-routing-table-private-003"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c921abfdc322ba0",
            "owner_id": "903578915146",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-routing-table-public"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f81ec403b89e2bfe",
            "route_table_id": "rtb-00b4af7b27cd26eb6",
            "subnet_id": "subnet-0d48e697e7f25e28f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddef8b30350e8ba4",
            "route_table_id": "rtb-02b0fe0c1170b11f0",
            "subnet_id": "subnet-04f262222fda120a4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c675d1815b625a3",
            "route_table_id": "rtb-0a58647581665d3d4",
            "subnet_id": "subnet-060c2a1d1f2cba39e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f62c956bd0527ff3",
            "route_table_id": "rtb-06c921abfdc322ba0",
            "subnet_id": "subnet-0470f1e270ce83d1c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09fea60a638d14a60",
            "route_table_id": "rtb-06c921abfdc322ba0",
            "subnet_id": "subnet-004695555e8c18403"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019122c1abce5ad53",
            "route_table_id": "rtb-06c921abfdc322ba0",
            "subnet_id": "subnet-0257d64ea0bc90a04"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:subnet/subnet-0d48e697e7f25e28f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/20",
            "id": "subnet-0d48e697e7f25e28f",
            "map_public_ip_on_launch": false,
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-private-subnet-001",
              "kubernetes.io/cluster/eks-demo-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:subnet/subnet-04f262222fda120a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-04f262222fda120a4",
            "map_public_ip_on_launch": false,
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-private-subnet-002",
              "kubernetes.io/cluster/eks-demo-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:subnet/subnet-060c2a1d1f2cba39e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-060c2a1d1f2cba39e",
            "map_public_ip_on_launch": false,
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-private-subnet-003",
              "kubernetes.io/cluster/eks-demo-prod": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:subnet/subnet-0470f1e270ce83d1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-0470f1e270ce83d1c",
            "map_public_ip_on_launch": true,
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-public-subnet-001",
              "kubernetes.io/cluster/eks-demo-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:subnet/subnet-004695555e8c18403",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-004695555e8c18403",
            "map_public_ip_on_launch": true,
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-public-subnet-002",
              "kubernetes.io/cluster/eks-demo-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:subnet/subnet-0257d64ea0bc90a04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-0257d64ea0bc90a04",
            "map_public_ip_on_launch": true,
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-public-subnet-003",
              "kubernetes.io/cluster/eks-demo-prod": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0080ce198f8fc1bf8"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:903578915146:vpc/vpc-0080ce198f8fc1bf8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d73bf2b90739bed",
            "default_route_table_id": "rtb-0ab0c686c38be6033",
            "default_security_group_id": "sg-0a9ae95d6e0b886b8",
            "dhcp_options_id": "dopt-0b21156d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0080ce198f8fc1bf8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ab0c686c38be6033",
            "owner_id": "903578915146",
            "tags": {
              "Environment": "prod",
              "Name": "eks-demo-prod-vpc",
              "kubernetes.io/cluster/eks-demo-prod": "shared"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_ingress",
      "name": "app",
      "provider": "module.eks.provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "2048-game/2048-ingress",
            "load_balancer_ingress": [],
            "metadata": [
              {
                "annotations": {
                  "alb.ingress.kubernetes.io/scheme": "internet-facing",
                  "alb.ingress.kubernetes.io/target-type": "ip",
                  "kubernetes.io/ingress.class": "alb"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {
                  "app": "2048-ingress"
                },
                "name": "2048-ingress",
                "namespace": "2048-game",
                "resource_version": "1608",
                "self_link": "/apis/extensions/v1beta1/namespaces/2048-game/ingresses/2048-ingress",
                "uid": "20d2afd7-74f6-4e64-89fb-747446feae3a"
              }
            ],
            "spec": [
              {
                "backend": [],
                "rule": [
                  {
                    "host": "",
                    "http": [
                      {
                        "path": [
                          {
                            "backend": [
                              {
                                "service_name": "service-2048",
                                "service_port": "80"
                              }
                            ],
                            "path": "/*"
                          }
                        ]
                      }
                    ]
                  }
                ],
                "tls": []
              }
            ],
            "wait_for_load_balancer": false
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.eks_cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_fargate_profile.main",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.fargate_pod_execution_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.kubernetes_deployment.app",
            "module.eks.kubernetes_service.app",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "example",
      "provider": "module.eks.provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "2048-game",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "2048"
                },
                "name": "2048-game",
                "resource_version": "777",
                "self_link": "/api/v1/namespaces/2048-game",
                "uid": "73e62b1f-b196-47e9-9622-729e089ad669"
              }
            ]
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.eks_cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "app",
      "provider": "module.eks.provider.kubernetes",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "2048-game/service-2048",
            "metadata": [
              {
                "generation": 0,
                "name": "service-2048",
                "namespace": "2048-game",
                "resource_version": "1605",
                "self_link": "/api/v1/namespaces/2048-game/services/service-2048",
                "uid": "8ee68901-4876-4109-8706-d9e099990aea"
              }
            ],
            "spec": [
              {
                "cluster_ip": "172.20.108.241",
                "external_traffic_policy": "Cluster",
                "port": [
                  {
                    "node_port": 30655,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "80"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app": "2048"
                },
                "session_affinity": "None",
                "type": "NodePort"
              }
            ]
          },
          "dependencies": [
            "module.eks.aws_cloudwatch_log_group.eks_cluster",
            "module.eks.aws_eks_cluster.main",
            "module.eks.aws_eks_fargate_profile.main",
            "module.eks.aws_iam_role.eks_cluster_role",
            "module.eks.aws_iam_role.fargate_pod_execution_role",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.AmazonEKSServicePolicy",
            "module.eks.kubernetes_deployment.app",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}